--- a/src/games/perudo/rounds/Rounds.module.scss
+++ b/src/games/perudo/rounds/Rounds.module.scss
@@ -3,14 +3,12 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    .headerContainer {
-        font-size: 150%;
-        .primaryHeader {
-            font-size: 75%;
-        }
+    .primaryMessage {
+        font-size: 140%;
     }
-    .secondaryHeader {
-        margin-top: 30px;
+    .secondaryMessage {
+        font-size: 120%;
+        margin-top: 20px;
         margin-bottom: 10px;
     }
 }
